fix:提升频道输入框的z-index

--- a/blocks/channel/text/style.less
+++ b/blocks/channel/text/style.less
@@ -83,7 +83,7 @@
     }
 
     &-input {
-        z-index         : 2;
+        z-index         : 1000;
         position        : absolute;
         bottom          : 0px;
         left            : 0px;
